@startuml class_diagram_model
skinparam classAttributeIconSize 0
skinparam dpi 150
skinparam packageStyle rectangle

title MODEL LAYER - Class Diagram

package "Model" {
    package "Player State" {
    enum PlaybackStatus {
        STOPPED
        PLAYING
        PAUSED
    }
    
    enum RepeatMode {
        NONE
        ONE
        ALL
    }
    
    interface IPlaybackState {
        +getPlaybackStatus() : PlaybackStatus
        +setPlaybackStatus(status) : void
        +isPlaying() : bool
        +togglePlayPause() : PlaybackStatus
    }
    
    interface IVolumeState {
        +getVolume() : int
        +setVolume(volume) : void
        +isMuted() : bool
        +setMuted(muted) : void
        +toggleMute() : bool
    }
    
    interface ITrackPosition {
        +getCurrentPosition() : uint32
        +setCurrentPosition(position) : void
        +getPlaybackVersion() : uint32
        +incrementPlaybackVersion() : void
    }
    
    interface IPlaylistNavigation {
        +getCurrentTrackIndex() : int
        +setCurrentTrackIndex(index) : void
        +getRepeatMode() : RepeatMode
        +setRepeatMode(mode) : void
        +cycleRepeatMode() : RepeatMode
        +isShuffleEnabled() : bool
        +setShuffleEnabled(enabled) : void
        +toggleShuffle() : bool
    }
    
    interface IPlayerState {
        +getPlaybackState() : PlaybackStatus
        +setPlaybackState(state) : void
    }
    
    class PlaybackStateImpl {
        -mStatus : atomic_int
        +getPlaybackStatus() : PlaybackStatus
        +setPlaybackStatus(status) : void
        +isPlaying() : bool
        +togglePlayPause() : PlaybackStatus
    }
    
    class VolumeStateImpl {
        -mVolume : atomic_int
        -mMuted : atomic_bool
        +getVolume() : int
        +setVolume(volume) : void
        +isMuted() : bool
        +setMuted(muted) : void
        +toggleMute() : bool
    }
    
    class TrackPositionImpl {
        -mPosition : atomic_uint32
        -mVersion : atomic_uint32
        +getCurrentPosition() : uint32
        +setCurrentPosition(position) : void
        +getPlaybackVersion() : uint32
        +incrementPlaybackVersion() : void
    }
    
    class PlaylistNavigationImpl {
        -mTrackIndex : atomic_int
        -mRepeatMode : atomic_int
        -mShuffle : atomic_bool
        +getCurrentTrackIndex() : int
        +setCurrentTrackIndex(index) : void
        +getRepeatMode() : RepeatMode
        +setRepeatMode(mode) : void
        +cycleRepeatMode() : RepeatMode
        +isShuffleEnabled() : bool
        +setShuffleEnabled(enabled) : void
        +toggleShuffle() : bool
    }
    
    class PlayerState <<facade>> {
        -mPlaybackState : PlaybackStateImpl
        -mVolumeState : VolumeStateImpl
        -mTrackPosition : TrackPositionImpl
        -mNavigation : PlaylistNavigationImpl
        +PlayerState()
        +reset() : void
        +getPlaybackStateComponent() : IPlaybackState
        +getVolumeStateComponent() : IVolumeState
        +getTrackPositionComponent() : ITrackPosition
        +getNavigationComponent() : IPlaylistNavigation
    }
    }
    package "Media File" {
    interface IMediaFileInfo {
        +getFilename() : string
        +setFilename(filename) : void
        +getPath() : string
        +setPath(path) : void
        +isValid() : bool
    }
    
    interface IMediaMetadata {
        +getDuration() : uint32
        +setDuration(duration) : void
        +getArtist() : string
        +setArtist(artist) : void
        +getAlbum() : string
        +setAlbum(album) : void
    }
    
    interface ICoverArt {
        +getCoverArt() : vector_uint8
        +setCoverArt(data) : void
        +hasCoverArt() : bool
    }
    
    interface IMediaFile {
    }
    
    class MediaFileInfo {
        -mFilename : string
        -mPath : string
        +getFilename() : string
        +setFilename(filename) : void
        +getPath() : string
        +setPath(path) : void
        +isValid() : bool
    }
    
    class MediaMetadata {
        -mDuration : uint32
        -mArtist : string
        -mAlbum : string
        +getDuration() : uint32
        +setDuration(duration) : void
        +getArtist() : string
        +setArtist(artist) : void
        +getAlbum() : string
        +setAlbum(album) : void
    }
    
    class CoverArt {
        -mData : vector_uint8
        +getCoverArt() : vector_uint8
        +setCoverArt(data) : void
        +hasCoverArt() : bool
    }
    
    class MediaFile <<facade>> {
        -mFileInfo : MediaFileInfo
        -mMetadata : MediaMetadata
        -mCoverArt : CoverArt
        +MediaFile()
        +getFileInfoComponent() : MediaFileInfo
        +getMetadataComponent() : MediaMetadata
        +getCoverArtComponent() : CoverArt
    }
    }
    IPlayerState --|> IPlaybackState
    IPlayerState --|> IVolumeState
    IPlayerState --|> ITrackPosition
    IPlayerState --|> IPlaylistNavigation
    
    PlaybackStateImpl ..|> IPlaybackState
    VolumeStateImpl ..|> IVolumeState
    TrackPositionImpl ..|> ITrackPosition
    PlaylistNavigationImpl ..|> IPlaylistNavigation
    
    PlayerState ..|> IPlayerState
    PlayerState *-- PlaybackStateImpl
    PlayerState *-- VolumeStateImpl
    PlayerState *-- TrackPositionImpl
    PlayerState *-- PlaylistNavigationImpl
    
    IMediaFile --|> IMediaFileInfo
    IMediaFile --|> IMediaMetadata
    IMediaFile --|> ICoverArt
    
    MediaFileInfo ..|> IMediaFileInfo
    MediaMetadata ..|> IMediaMetadata
    CoverArt ..|> ICoverArt
    
    MediaFile ..|> IMediaFile
    MediaFile *-- MediaFileInfo
    MediaFile *-- MediaMetadata
    MediaFile *-- CoverArt
}

@enduml
